5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1729_2523.log
== TEST (2019-05-15 18:23:23) 
-- CODE:
mensagem = str(input("Digirte o resultado: "))

empate = 0
vitoria = 0

while(mensagem.upper() != "X"):
	mensagem = str(input("Digirte o resultado: "))
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E")
		empate = empate + 1

print("Total de pontos das vitorias: ")
print("Total de pontos dos empates: ")
-- ERROR:
File "XXXX", line 10
    elif(mensagem.upper() == "E")
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:23:32) 
-- CODE:
mensagem = str(input("Digirte o resultado: "))

empate = 0
vitoria = 0

while(mensagem.upper() != "X"):
	mensagem = str(input("Digirte o resultado: "))
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1

print("Total de pontos das vitorias: ")
print("Total de pontos dos empates: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:23:55) 
-- CODE:
mensagem = str(input("Digirte o resultado: "))

empate = 0
vitoria = 0

while(mensagem.upper() != "X"):
	mensagem = str(input("Digirte o resultado: "))
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1

print("Total de pontos das vitorias: ", vitoria)
print("Total de pontos dos empates: ", empate)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:24:15) 
-- CODE:
empate = 0
vitoria = 0

while(mensagem.upper() != "X"):
	mensagem = str(input("Digirte o resultado: "))
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1

print("Total de pontos das vitorias: ", vitoria)
print("Total de pontos dos empates: ", empate)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(mensagem.upper() != "X"):
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:25:26) 
-- CODE:
mensagem = input("Digirte o resultado: ")

empate = 0
vitoria = 0

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = mensagem + 3
	elif(mensagem.upper() == "E"):
		empate = mensagem + 1
	mensagem = str(input("Digirte o resultado: "))

print("Total de pontos das vitorias: ", vitoria)
print("Total de pontos dos empates: ", empate)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:25:57) 
-- CODE:
mensagem = input("Digirte o resultado: ")

empate = 1
vitoria = 3

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digirte o resultado: "))

print("Total de pontos das vitorias: ", vitoria)
print("Total de pontos dos empates: ", empate)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:28:37) 
-- CODE:
empate = 0
vitoria = 0

while(mensagem.upper() != "X"):
	mensagem = str(input("Digite o resultado: "))
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1

print("Total de pontos das vitorias: ", vitoria)
print("Total de pontos dos empates: ", empate)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(mensagem.upper() != "X"):
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:29:36) 
-- CODE:
mensagem = input("Digite o resultado: ")

empate = 0
vitoria = 0

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digite o resultado: "))

print("Total de pontos das vitorias: ", vitoria-3)
print("Total de pontos dos empates: ", empate-1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:29:54) 
-- CODE:
mensagem = input("Digite o resultado: ")

empate = 0
vitoria = 0

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digite o resultado: "))

print("Total de pontos das vitorias: ", vitoria-3)
print("Total de pontos dos empates: ", empate-1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:31:55) 
-- CODE:
mensagem = input("Digite o resultado: ")

if (mensagem.upper() == "V"):
	vitoria = 3
elif (mensagem.upper() == "E"):
	empate = 1
else:
	vitoria = 0
	empate = 0

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digite o resultado: "))

print("Total de pontos das vitorias: ", vitoria)
print("Total de pontos dos empates: ", empate)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:32:45) 
-- CODE:
mensagem = input("Digite o resultado: ")

vitoria = 0
empate = 0

if (mensagem.upper() == "V"):
	vitoria = 3
elif (mensagem.upper() == "E"):
	empate = 1

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digite o resultado: "))

print("Total de pontos das vitorias: ", vitoria)
print("Total de pontos dos empates: ", empate)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:33:12) 
-- CODE:
mensagem = input("Digite o resultado: ")

vitoria = 0
empate = 0

if (mensagem.upper() == "V"):
	vitoria = -3
elif (mensagem.upper() == "E"):
	empate = -1

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digite o resultado: "))

print("Total de pontos das vitorias: ", vitoria)
print("Total de pontos dos empates: ", empate)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:33:49) 
-- CODE:
mensagem = input("Digite o resultado: ")

vitoria = 0
empate = 0

if (mensagem.upper() == "V"):
	vitoria = 3
elif (mensagem.upper() == "E"):
	empate = 1

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digite o resultado: "))

print("Total de pontos das vitorias: ", vitoria)
print("Total de pontos dos empates: ", empate)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:37:43) 
-- CODE:
mensagem = input("Digite o resultado: ")

vitoria = 0
empate = 0
add = 0

if (mensagem.upper() == "V"):
	add = 3
elif (mensagem.upper() == "E"):
	add = 1

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digite o resultado: "))

print("Total de pontos das vitorias: ", vitoria+add)
print("Total de pontos dos empates: ", empate+add)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:38:24) 
-- CODE:
mensagem = input("Digite o resultado: ")

vitoria = 0
empate = 0
add1 = 0
add2 = 0

if (mensagem.upper() == "V"):
	add1 = 3
elif (mensagem.upper() == "E"):
	add2 = 1

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digite o resultado: "))

print("Total de pontos das vitorias: ", vitoria+add1)
print("Total de pontos dos empates: ", empate+add2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:38:42) 
-- CODE:
mensagem = input("Digite o resultado: ")

vitoria = 0
empate = 0
add1 = 0
add2 = 0

if (mensagem.upper() == "V"):
	add1 = 3
elif (mensagem.upper() == "E"):
	add2 = 1

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digite o resultado: "))

print("Total de pontos das vitorias: ", vitoria+add1)
print("Total de pontos dos empates: ", empate+add2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:40:08) 
-- CODE:
mensagem = input("Digite o resultado: ")

vitoria = 0
empate = 0
add1 = 0
add2 = 0

if (mensagem.upper() == "V"):
	add1 = 3
	vitoria = -3
elif (mensagem.upper() == "E"):
	add2 = 1
	empate = -1

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digite o resultado: "))

print("Total de pontos das vitorias: ", vitoria+add1)
print("Total de pontos dos empates: ", empate+add2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:40:57) 
-- CODE:
mensagem = input("Digite o resultado: ")

vitoria = 0
empate = 0
add1 = 0
add2 = 0

if (mensagem.upper() == "V"):
	add1 = 3
	vitoria = -3
elif (mensagem.upper() == "E"):
	add2 = 1
	empate = -1

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digite o resultado: "))

print("Total de pontos das vitorias: ", vitoria+add1)
print("Total de pontos dos empates: ", empate+add2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:41:06) 
-- CODE:
mensagem = input("Digite o resultado: ")

vitoria = 0
empate = 0
add1 = 0
add2 = 0

if (mensagem.upper() == "V"):
	add1 = 3
	vitoria = -3
elif (mensagem.upper() == "E"):
	add2 = 1
	empate = -1

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digite o resultado: "))

print("Total de pontos das vitorias: ", vitoria+add1)
print("Total de pontos dos empates: ", empate+add2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:41:14) 
-- CODE:
mensagem = input("Digite o resultado: ")

vitoria = 0
empate = 0
add1 = 0
add2 = 0

if (mensagem.upper() == "V"):
	add1 = 3
	vitoria = -3
elif (mensagem.upper() == "E"):
	add2 = 1
	empate = -1

while(mensagem.upper() != "X"):
	if (mensagem.upper() == "V"):
		vitoria = vitoria + 3
	elif(mensagem.upper() == "E"):
		empate = empate + 1
	mensagem = str(input("Digite o resultado: "))

print("Total de pontos das vitorias: ", vitoria+add1)
print("Total de pontos dos empates: ", empate+add2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    mensagem = str(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
